@@ -1,0 +1,6 @@
+IGUI_EN = {
+    IGUI_announce_IPeedMyself = "I pissed myself...",
+    IGUI_announce_IPoopedMyself = "I shit myself...",
+    IGUI_announce_UrgeHiccup = "Oh no, I can't hold it!",
+    IGUI_announce_CantPickUpPee = "I'll need to clean this up."
+}
