@@ -12,6 +12,7 @@
 -Removed "Bladder / Bowel Moodle Type" mod option for now. Might come back eventually.
 -Renamed health menu tab from "Bathroom" to "Excretion"
 -MASSIVE optimization for peed clothing textures. Therefore also removed the "(Testing)" text for the "(Testing) Show Wet Spot" sandbox option.
+-Added "'Say' Status" mod option that lets you choose if you want text displaying your status above your head.
 
 ==============
 [VERSION 0.42]
